<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:iconSpaceReserved="false">

    <EditTextPreference
        android:key="@string/key_name"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/nothing"
        android:title="@string/name"
        android:iconSpaceReserved="false"/>

    <EditTextPreference
        android:inputType="textEmailAddress"
        android:key="@string/key_email"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/nothing"
        android:title="@string/email"
        android:iconSpaceReserved="false"/>

    <EditTextPreference
        android:inputType="number"
        android:key="@string/key_age"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/nothing"
        android:title="@string/age"
        android:iconSpaceReserved="false"/>


    <EditTextPreference
        android:key="@string/key_phone"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/nothing"
        android:title="@string/phone_number"
        android:iconSpaceReserved="false"/>

    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/key_love"
        android:title="@string/is_love"
        android:iconSpaceReserved="false"/>

</PreferenceScreen>